# orion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: tests.yml
examples/: README.md  app_connection.rs
monitoring/explorer/: index.html  nginx.conf
monitoring/grafana/dashboards/: orion-consensus.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: benchmark.sh  generate_jwt.sh
src/: bft.rs  committee.rs  crypto.rs  dag.rs  engine_api.rs  execution.rs  lib.rs  main.rs  metrics.rs  network.rs  node.rs  raptorcast.rs  reth_execution.rs  types.rs
tests/: integration_test.rs  ordering_guarantees.rs  raptorcast_propagation.rs
