[package]
name = "orion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orion-node"
path = "src/main.rs"

[[bin]]
name = "orion-reth-demo"
path = "src/bin/orion_reth_demo.rs"

[[bin]]
name = "orion-reth-bench"
path = "src/bin/orion_reth_bench.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
eyre = "0.6"
blake2 = "0.10"
digest = "0.10"
parking_lot = "0.12"
rand = "0.8"
bincode = "1.3"
async-trait = "0.1"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1"] }
http-body-util = "0.1"

[[example]]
name = "app_connection"
path = "examples/app_connection.rs"
